signin, my account mock-up pages

--- a/Views/layout.ejs
+++ b/Views/layout.ejs
@@ -18,6 +18,7 @@
                     <ul class="nav navbar-nav">
                             <li><a href="/" class="navbar-brand">EventApp</a></li>
                             <li><a href="/signin">Sign In</a></li>
+                            <li><a href="/myaccount">My Account</a></li>
                     </ul>
                 </div>
         </nav>
