Signup Page Revised

--- a/Views/layout.ejs
+++ b/Views/layout.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="/Scripts/require.js"></script>
     <script src="/Scripts/angular.min.js"></script>
     <script src="/Scripts/App/app.js"></script>
     <script src="/Scripts/App/AngularServices/angularService.js"></script>
