--- a/Views/signup.ejs
+++ b/Views/signup.ejs
@@ -1,13 +1,15 @@
 <% include layout %>
-<!--<script src="/Scripts/App/AngularControllers/signUpController.js"></script>-->
+<script src="/Scripts/App/AngularControllers/signUpController.js"></script>
 <script src="/Scripts/App/Classes/AppAccount.js"></script>
+<script src="/Scripts/App/Classes/FormFieldValidator.js"></script>
+<script src="/Scripts/App/Classes/FormValidationMessage.js"></script>
+<script src="/Scripts/App/Classes/DbContext.js"></script>
 <script>
 var AppAccount = new AppAccount();
 </script>
-
 <div ng-controller="SignUpController as c" class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
     <div>
-    <h3>Sign In</h3>
+    <h3>Sign Up</h3>
         <table class="table table-striped">
             <tr>
                 <td><b>Username</b></td>
