--- a/Views/layout.ejs
+++ b/Views/layout.ejs
@@ -18,9 +18,10 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                             <li><a href="/" class="navbar-brand">EventApp</a></li>
-                            <li><a href="/signin">Sign In</a></li>
-                            <li><a href="/signup">Sign Up</a></li>
-                            <li><a href="/myaccount">My Account</a></li>
+                            <li id="signInMenu"><a href="/signin">Sign In</a></li>
+                            <li id="signUpMenu"><a href="/signup">Sign Up</a></li>
+                            <li id="myAccountMenu"><a href="/myaccount">My Account</a></li>
+                            <li id="signOutMenu"><a href="/signout">Sign Out</a></li>
                     </ul>
                 </div>
         </nav>
@@ -28,6 +29,20 @@
 </div>
 
 <script src="/CSS/bootstrap.min.js"></script>
+<script>
+        var loggedInUser = document.cookie;
+        if (loggedInUser) {
+            document.getElementById("signInMenu").style.display = "none";
+            document.getElementById("signUpMenu").style.display = "none";
+            document.getElementById("myAccountMenu").style.display = "inline";
+            document.getElementById("signOutMenu").style.display = "inline";
+        } else {
+            document.getElementById("signInMenu").style.display = "inline";
+            document.getElementById("signUpMenu").style.display = "inline";
+            document.getElementById("myAccountMenu").style.display = "none";
+            document.getElementById("signOutMenu").style.display = "none";
+        }
+</script>
 </body>
 </html>
 
