Forgot password (in progress)

--- a/Views/forgotPassword.ejs
+++ b/Views/forgotPassword.ejs
@@ -1,5 +1,5 @@
 <% include layout %>
-<script src="/Scripts/App/AngularControllers/signInController.js"></script>
+<script src="/Scripts/App/AngularControllers/forgotPasswordController.js"></script>
 <script src="/Scripts/App/Classes/AppAccount.js"></script>
 <script src="/Scripts/App/Classes/FormFieldValidator.js"></script>
 <script src="/Scripts/App/Classes/FormValidationMessage.js"></script>
@@ -7,10 +7,9 @@
 <script>
     var AppAccount = new AppAccount();
 </script>
-
-<div ng-controller="SignInController as c" class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
+<div ng-controller="ForgotPasswordController as c" class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
     <div>
-    <h3>Sign In</h3>
+    <h3>Forgot Password</h3>
         <table class="table table-striped">
             <tr>
                 <td><b>Username</b></td>
@@ -18,12 +17,13 @@
                 <td ng-show="IsUserNameFailure">{{userNameFailureMessage}}</td>
             </tr>
             <tr>
-                <td><b>Password</b></td>
-                <td><input type="password" class="input-xs" ng-model="AppAccount.password"></td>
-                <td ng-show="IsPasswordFailure">{{passwordFailureMessage}}</td>
+                <td><b>Email</b></td>
+                <td><input type="text" class="input-xs" ng-model="AppAccount.email"></td>
+                <td ng-show="IsEmailFailure">{{emailFailureMessage}}</td>
             </tr>
         </table>
-        <input type="button" class="btn-xs" value="Sign In" ng-click="c.SignIn(AppAccount.username, AppAccount.password)">
-        <a href="forgotPassword"><input type="button" class="btn-xs" value="Forgot Password?"></a>  
+        <h4 class="h4">{{passwordResetMessage}}</h4>
+        <input type="button" class="btn-xs" value="Reset Password" ng-click="c.ResetPassword(AppAccount.username, AppAccount.email)">
     <div>
 </div>
+
