Event's Partial Implementation
Still needs more work, such as validation, unique id's, and integration
with Users.

--- a/Views/signin.ejs
+++ b/Views/signin.ejs
@@ -25,5 +25,5 @@
         </table>
         <input type="button" class="btn-xs" value="Sign In" ng-click="c.SignIn(AppAccount.username, AppAccount.password)">
         <a href="/Views/forgotPassword"><input type="button" class="btn-xs" value="Forgot Password?"></a>  
-    <div>
+    </div>
 </div>
