--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -6,7 +6,7 @@
         <div class="form-group">
             <input type="text" ng-model="searchKeyword" class="input-sm" placeholder="Type keywords here" autofocus>
             <button class="btn-xs">Search</button>
-            <button class="btn-xs">+</button>
+            <a href="/createevent"><button class="btn-xs">+</button></a>
         </div>
     </p>
 
