ChangePassword funtionality added

--- a/Views/forgotPassword.ejs
+++ b/Views/forgotPassword.ejs
@@ -9,21 +9,19 @@
 </script>
 <div ng-controller="ForgotPasswordController as c" class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
     <div>
-    <h3>Forgot Password</h3>
+        <h3>Forgot Password</h3>
         <table class="table table-striped">
             <tr>
                 <td><b>Username</b></td>
-                <td><input type="text" class="input-xs" ng-model="AppAccount.username"></td>
+                <td><input type="text" class="input" ng-model="AppAccount.username"></td>
                 <td ng-show="IsUserNameFailure">{{userNameFailureMessage}}</td>
             </tr>
             <tr>
                 <td><b>Email</b></td>
-                <td><input type="text" class="input-xs" ng-model="AppAccount.email"></td>
+                <td><input type="text" class="input" ng-model="AppAccount.email"></td>
                 <td ng-show="IsEmailFailure">{{emailFailureMessage}}</td>
             </tr>
         </table>
-        <h4 class="h4">{{passwordResetMessage}}</h4>
-        <input type="button" class="btn-xs" value="Reset Password" ng-click="c.ResetPassword(AppAccount.username, AppAccount.email)">
-    <div>
+        <input type="button" class="btn" value="Reset Password" ng-click="c.ResetPassword(AppAccount.username, AppAccount.email)">
+    </div>
 </div>
-
