--- a/Views/createEvent.ejs
+++ b/Views/createEvent.ejs
@@ -12,34 +12,34 @@
         <table class="table table-striped">
             <tr>
                 <td><b>Event Name</b></td>
-                <td><input type="text" class="input-xs" ng-model="Event.eventName"></td>
+                <td><input type="text" class="input" ng-model="Event.eventName"></td>
             </tr>
             <tr>
                 <td><b>Tag</b></td>
-                <td><input type="text" class="input-xs" ng-model="Event.tag"></td>
+                <td><input type="text" class="input" ng-model="Event.tag"></td>
             </tr>
             <tr>
                 <td><b>Date</b></td>
-                <td><input type="text" class="input-xs" ng-model="Event.date"></td>
+                <td><input type="text" class="input" ng-model="Event.date"></td>
             </tr>
             <tr>
                 <td><b>Time</b></td>
-                <td><input type="text" class="input-xs" ng-model="Event.time"></td>
+                <td><input type="text" class="input" ng-model="Event.time"></td>
             </tr>
             <tr>
                 <td><b>Location</b></td>
-                <td><input type="text" class="input-xs" ng-model="Event.location"></td>
+                <td><input type="text" class="input" ng-model="Event.location"></td>
             </tr>
             <tr>
                 <td><b>Invitees</b></td>
-                <td><input type="text" class="input-xs" ng-model="Event.invitees"></td>
+                <td><input type="text" class="input" ng-model="Event.invitees"></td>
             </tr>
             <tr>
                 <td><b>Description</b></td>
-                <td><input type="text" class="input-xs" ng-model="Event.description"></td>
+                <td><input type="text" class="input" ng-model="Event.description"></td>
             </tr>
         </table>
-        <input type="button" class="btn-xs" value="Create Event" ng-click="c.CreateEvent(Event.eventName, Event.tag, Event.date, Event.time, Event.location, Event.invitees, Event.description)">
-        <input type="button" class="btn-xs" value="Cancel" ng-click="c.Cancel()">
+        <input type="button" class="btn" value="Create Event" ng-click="c.CreateEvent(Event.eventName, Event.tag, Event.date, Event.time, Event.location, Event.invitees, Event.description)">
+        <input type="button" class="btn" value="Cancel" ng-click="c.Cancel()">
     </div>
 </div>
