--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -4,9 +4,9 @@
 <div ng-controller="HomeController" class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
     <p>
         <div class="form-group">
-            <input type="text" ng-model="searchKeyword" class="input-sm" placeholder="Type keywords here" autofocus>
-            <button class="btn-xs">Search</button>
-            <a href="/createevent"><button class="btn-xs">+</button></a>
+            <input type="text" ng-model="searchKeyword" class="input" placeholder="Type keywords here" autofocus>
+            <button class="btn">Search</button>
+            <a href="/createevent"><button class="btn">+</button></a>
         </div>
     </p>
 
