--- a/Views/myAccount.ejs
+++ b/Views/myAccount.ejs
@@ -1,9 +1,41 @@
-
 <% include layout %>
-<script src="/Scripts/App/AngularControllers/MyAccountController.js"></script>
+<script src="/Scripts/App/AngularControllers/myAccountController.js"></script>
+<script src="/Scripts/App/Classes/AppAccount.js"></script>
+<script src="/Scripts/App/Classes/FormFieldValidator.js"></script>
 <script src="/Scripts/App/Classes/FormValidationMessage.js"></script>
+<script src="/Scripts/App/Classes/DbContext.js"></script>
+<script>
+    var AppAccount = new AppAccount();
+</script>
 
-<div ng-controller="MyAccountController" class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
-
+<div ng-controller="MyAccountController as c" class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
+    <div>
+        <h3>Events You've Hosted</h3>
+    </div>
+    <hr>
+    <div>
+        <h3>Events You've Joined</h3>
+    </div>
+    <hr>
+    <div>
+        <h3>Change Your Password</h3>
+        <table class="table table-striped">
+            <tr>
+                <td><b>Current Password</b></td>
+                <td><input type="password" class="input" ng-model="AppAccount.password"></td>
+                <td ng-show="IsCurrentPasswordFailure">{{currentPasswordFailureMessage}}</td>
+            </tr>
+            <tr>
+                <td><b>New Password</b></td>
+                <td><input type="password" class="input" ng-model="AppAccount.newPassword"></td>
+                <td ng-show="IsPasswordFailure">{{passwordFailureMessage}}</td>
+            </tr>
+            <tr>
+                <td><b>Confirm New Password</b></td>
+                <td><input type="password" class="input" ng-model="AppAccount.confirmPassword"></td>
+                <td ng-show="IsConfirmPasswordFailure">{{confirmPasswordFailureMessage}}</td>
+            </tr>
+        </table>
+        <input type="button" class="btn" value="Change Password" ng-click="c.ChangePassword(AppAccount.password, AppAccount.newPassword, AppAccount.confirmPassword)">
+    </div>
 </div>
-
