--- a/Views/forgotPassword.ejs
+++ b/Views/forgotPassword.ejs
@@ -13,12 +13,12 @@
         <table class="table table-striped">
             <tr>
                 <td><b>Username</b></td>
-                <td><input type="text" class="input" ng-model="AppAccount.username"></td>
+                <td><input type="text" class="form-control" ng-model="AppAccount.username"></td>
                 <td ng-show="IsUserNameFailure">{{userNameFailureMessage}}</td>
             </tr>
             <tr>
                 <td><b>Email</b></td>
-                <td><input type="text" class="input" ng-model="AppAccount.email"></td>
+                <td><input type="text" class="form-control" ng-model="AppAccount.email"></td>
                 <td ng-show="IsEmailFailure">{{emailFailureMessage}}</td>
             </tr>
         </table>
