--- a/Views/layout.ejs
+++ b/Views/layout.ejs
@@ -29,6 +29,7 @@
 </div>
 
 <script src="/CSS/bootstrap.min.js"></script>
+<script src="/Scripts/ui-bootstrap-tpls-2.2.0.min.js"></script>
 <script>
         var loggedInUser = document.cookie;
         if (loggedInUser) {
@@ -43,6 +44,7 @@
             document.getElementById("signOutMenu").style.display = "none";
         }
 </script>
+
 </body>
 </html>
 
