--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -4,13 +4,16 @@
 <div ng-controller="HomeController" class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
     <p>
         <div class="form-group">
-            <input type="text" ng-model="searchKeyword" class="input" placeholder="Type keywords here" autofocus>
-            <button class="btn">Search</button>
-            <a href="/createevent"><button class="btn">+</button></a>
+            <input type="text" ng-model="searchKeyword" class="form-control" placeholder="Type keywords here" autofocus>
+        </div>
+        <div class="text-right">
+                <button class="btn">Search</button>
+                <a href="/createevent"><button class="btn">+</button></a>
         </div>
     </p>
 
     <hr>
+
     <div>
         <h3>Events Searched</h3>
         <table class="table table-striped">
