--- a/Views/createEvent.ejs
+++ b/Views/createEvent.ejs
@@ -2,6 +2,7 @@
 <script src="/Scripts/App/AngularControllers/createEventController.js"></script>
 <script src="/Scripts/App/Classes/Event.js"></script>
 <script src="/Scripts/App/Classes/DbContext.js"></script>
+<script src="/Scripts/App/Classes/DateTimeConverter.js"></script>
 <script>
     var UserEvent = new UserEvent();
 </script>
