--- a/Views/myAccount.ejs
+++ b/Views/myAccount.ejs
@@ -11,7 +11,7 @@
 <div ng-controller="UserController" class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
     <div ng-init="ViewUserHostedEvents()">
         <h3>Events You've Hosted</h3>
-        <div ng-repeat="item in userEventList">
+        <div ng-repeat="item in userHostedEventList">
             <% include eventListForm %>
         </div>
     </div>
@@ -20,7 +20,7 @@
     
     <div ng-init="ViewUserJoinedEvents()">
         <h3>Events You've Joined</h3>
-        <div ng-repeat="item in userEventList">
+        <div ng-repeat="item in userJoinedEventList">
             <% include eventListForm %>
         </div>
     </div>
