--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -7,7 +7,7 @@
             <input type="text" ng-model="searchKeyword" class="form-control" placeholder="Type keywords here" autofocus>
         </div>
         <div class="text-right">
-                <button class="btn" ng-click="SearchEvents()">Search</button>
+                <button class="btn" ng-click="SearchEvents(searchKeyword)">Search</button>
                 <a href="/createevent"><button class="btn">+</button></a>
         </div>
     </p>
