--- a/Views/signup.ejs
+++ b/Views/signup.ejs
@@ -33,6 +33,6 @@
                 <td ng-show="IsConfirmPasswordFailure">{{confirmPasswordFailureMessage}}</td>
             </tr>
         </table>
-        <input type="button" class="btn-xs" value="Sign Up" ng-click="c.SignUp(AppAccount.userName, AppAccount.email, AppAccount.password, AppAccount.confirmPassword)">
+        <input type="button" class="btn" value="Sign Up" ng-click="c.SignUp(AppAccount.userName, AppAccount.email, AppAccount.password, AppAccount.confirmPassword)">
     </div>
 </div>
